Move to using Log4j2 for logging in DN tests. See core-48